KUSE/yaml/nginx-latest.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-latest
  namespace: kyverno-lab
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx-latest
  template:
    metadata:
      labels:
        app: nginx-latest
    spec:
      containers:
      - name: nginx
        image: nginx:latest
        ports:
        - containerPort: 80
