KUSE/yaml/db-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: db
  namespace: db
spec:
  selector:
    app: db
  ports:
  - port: 80
    targetPort: 80
