KUSE/yaml/db-deny-all.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: deny-all-ingress
  namespace: db
spec:
  podSelector: {}
  policyTypes:
  - Ingress
